# writer-mcp

./: .env.example  DESIGN.md  README.md  main.py  pyproject.toml  run_server.py
scripts/: dev_server.py  init_db.py
src/writer_mcp/: __init__.py  config.py  server.py
src/writer_mcp/database/: __init__.py  connection.py  init.py  models.py
src/writer_mcp/schemas/: __init__.py  models.py
src/writer_mcp/services/: __init__.py  ai_service.py  character_service.py  embedding_service.py
src/writer_mcp/tools/: __init__.py  character_tools.py
src/writer_mcp/utils/: __init__.py  logger.py  text_processing.py  validators.py
tests/: conftest.py  test_character_service.py
